--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Soreanu Stefan Alexandru</title>
-    <link rel="stylesheet" href="style.css"> <!-- Link to your CSS file -->
+    <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
 
@@ -25,7 +25,7 @@
             <br>
             <img src="image/profilephoto.png" alt="My Photo" srcset="">
             <h3>I'm Stefan Alexandru Soreanu, a passionate developer.</h3>
-            <!--<a href="#contact" class="btn">Hire Me</a>-->
+            
         </section>
 
         <section id="about">
@@ -75,7 +75,7 @@
                     had problems with C#.
                 </p>
             </div>
-            <!-- Add more projects as needed -->
+            
         </section>
 
         <section id="contact">
@@ -92,7 +92,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
+        <p>&copy; 2025 Stefan Alexandru Soreanu. All rights reserved.</p>
     </footer>
 
 </body>
